--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Code Adventure</title>
     <link rel="stylesheet" href="public/style/style.css">
@@ -13,6 +13,12 @@
         <div id="inventaire"></div>
         <div class="unpaused" id="pause">
           <p>PAUSE</p>
+        </div>
+        <div id="unlock-window" class="unpaused">
+          <div id="unlock-bloc">
+            <h2 id="unlock-title">Placeholder text</h2>
+            <p id="unlock-text">This is a placeholder text</p>
+          </div>
         </div>
       </div>
       <canvas id="game"></canvas>
