--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Code Adventure</title>
-    <link rel="stylesheet" href="public/style/style.css">
+    <link rel="stylesheet" href="style/style.css">
   </head>
   <body>
     <div id="app">
@@ -18,6 +18,14 @@
           <div id="unlock-bloc">
             <h2 id="unlock-title">Placeholder text</h2>
             <p id="unlock-text">This is a placeholder text</p>
+          </div>
+        </div>
+        <div id="interact-block" class="unpaused">
+          <div id="interact-window">
+            <h2>Boìte d'interaction</h2>
+            <div id="drop-zone">
+
+            </div>
           </div>
         </div>
       </div>
