added text on the interaction window

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <div id="interact-block" class="unpaused">
           <div id="interact-window">
             <h2>Boìte d'interaction</h2>
+            <p id="interact-text"></p>
             <div id="drop-zone">
-
             </div>
           </div>
         </div>
