cleaned code added comments

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div id="interact-block" class="unpaused">
           <div id="interact-window">
-            <h2>Boìte d'interaction</h2>
+            <h2>Interaction Zone</h2>
             <p id="interact-text"></p>
             <div id="drop-zone">
             </div>
@@ -31,7 +31,6 @@
       </div>
       <canvas id="game"></canvas>
     </div>
-<!--    <canvas id="game"></canvas>-->
     <script type="module" src="src/main.js"></script>
   </body>
 </html>
